Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22398

mariabackup.innodb_xa_rollback fails on repeat

    XMLWordPrintable

Details

    Description

      When MTR used with --repeat option the test fails with the following error:

      mariabackup.innodb_xa_rollback 'innodb'  w52 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2020-04-27 14:32:54
      line
      2020-04-27 14:32:03 0 [ERROR] InnoDB: Page [page id: space=0, page number=47] log sequence number 1639453 is in the future! Current system log sequence number 1639445.
      2020-04-27 14:32:03 0 [ERROR] InnoDB: Your database may be corrupt or you may have copied the InnoDB tablespace but not the InnoDB log files. Please refer to https://mariadb.com/kb/en/library/innodb-recovery-modes/ for information about forcing recovery.
      2020-04-27 14:32:03 0 [ERROR] InnoDB: Page [page id: space=0, page number=311] log sequence number 1639453 is in the future! Current system log sequence number 1639445.
      2020-04-27 14:32:03 0 [ERROR] InnoDB: Your database may be corrupt or you may have copied the InnoDB tablespace but not the InnoDB log files. Please refer to https://mariadb.com/kb/en/library/innodb-recovery-modes/ for information about forcing recovery.
      ^ Found warnings in /dev/shm/10.3/mysql-test/var/52/log/mysqld.1.err
      

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              vlad.lesin Vladislav Lesin (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.