MDEV-22398: mariabackup.innodb_xa_rollback fails on repeat

Flush LSN to system tablespace on innodb shutdown if XA is rolled back by
mariabackup.